<resources>

    <!--==============================================================-->
    <!--Названия экранов и приложения-->
    <!--==============================================================-->

    <string name="app_name">Measurements</string>
    <string name="action_settings">Настройки</string>

    <!--==============================================================-->
    <!--Общее-->
    <!--==============================================================-->

    <string name="OK">Ок</string>
    <string name="Cancel">Отмена</string>
    <string name="Delete">Удалить</string>
    <string name="Next">Далее</string>

    <!--==============================================================-->
    <!--Меню-->
    <!--==============================================================-->

    <string name="mainmenu_title">Система учета измерений</string>
    <string name="mainmenu_autor">Алябьев В.О., Кафедра ВМСС, НИУ "МЭИ", 2022 г.</string>

    <string name="mainmenu_toAddScreen">Добавить данные</string>
    <string name="mainmenu_toSettingsScreen">Настройки</string>
    <string name="mainmenu_toListScreen">Просмотреть данные</string>
    <string name="mainmenu_toImpExpScreen">Импорт/экспорт</string>


    <!--==============================================================-->
    <!--Часть добавления данных-->
    <!--==============================================================-->

    <!--Экран ввода основной информации о измерении-->
    <string name="AddNewMes_label">Новое измерение</string>

    <string name="newMesName_label">Введите название измерения:</string>
    <string name="newMesName_hint">Измерение 1</string>
    <string name="newMesComment_label">Введите комментарий для измерения:</string>
    <string name="newMesComment_hint">Комментарий</string>
    <string name="newMes_helpText">Введите такое название, чтобы вы могли отличить данное измерение от других.\nВ
        комментарий внесите дополнительную информацию о измерении. Это может быть принадлежность к какой-либо серии
        опытов, развернутое описание измерения и т.п.
    </string>

    <!--Экран ввода шкал и значений измерения-->

    <string name="newMesValues_helpText">Добавьте необходимые шкалы, либо используйте шаблон, затем внесите измеренные
        величины.
    </string>
    <string name="newMesValues_listLabel_noValues">Вы пока что не добавили ни одной шкалы.</string>
    <string name="newMesValues_listLabel">Измеренные величины:</string>
    <string name="newMesValues_button_add">Добавить шкалу</string>
    <string name="newMesValues_button_save">Выбрать шаблон</string>
    <string name="newMesValues_button_template">Сохранить измерение</string>


    <string name="info_text">Для чего это приложение?
        \n\nMES предназначено для удобных записи, просмотра, изменения и хранения данных о показаниях измерительных
        приборов. Приложение можно использовать, например в лаборатории, записывая в него результаты какого-либо
        эксперимента (измерение параметров электрической цепи, микроклимата помещения, и т.п.).
        \n\nКак использовать приложение?
        \n\n1. Приборы
        \n\nДля того, чтобы внести новое измерение в приложение, необходимо сначала добавить прибор (или приборы), на
        котором оно проводится. Для этого перейдите в настройки, выберите меню \"Сохраненные приборы\", а затем нажмите на
        кнопку с символом \"+\" внизу экрана. Затем заполните информацию о приборе (название, тип, комментарий, а также
        список шкал прибора). После нажатия кнопки "Сохранить" прибор появится в списке приборов. Теперь его можно
        использовать.
        \nНажав на прибор в списке, можно просмотреть всю информацию о нем.
        \nПо долгому нажатию на прибор можно его удалить, или изменить данные о нем.
        \n\n2. Добавление новых данных
        \n\nЧтобы добавить новые показания приборов, в главном меню нажмите на кнопку \"Добавить данные\". Заполните поля,
        выберите шкалы нужных вам приборов и заполните снятые вами значения в появившиеся поля. Когда все готово,
        нажмите кнопку \"Сохранить\", после чего данные об измерении сохранятся.\n
        Долгим нажатием на шкалу в списке на экране добавления шкал в измерение, можно удалить ее из списка, если она
        была добавлена по ошибке.
        \n\n3. Просмотр снятых значений
        \n\nЧтобы просмотреть сохраненные данные, нажмите кнопку \"Просмотреть данные\". В открывшемся списке нажмите на любое
        измерение, чтобы увидеть всю информацию о нем. Долгим нажатием на снятое значение, можно посмотреть, какой
        прибор использовался для его снятия.
        \nДолгим нажатием на измерение в списке можно удалить его.
        \n\n4. Шаблоны
        \n\nДля более быстрого добавления большого количества однотипных измерений можно использовать шаблоны.\n
        Для создания шаблона перейдите в настройки, выберите меню \"Сохраненные шаблоны\" и нажмите на кнопку со знаком
        \"+\" внизу экрана. Заполните информацию о шаблоне, а затем добавьте шкалы, которые вы хотите использовать. После
        нажатия кнопки \"Сохранить\" новый шаблон можно увидеть в списке шаблонов. Долгим нажатием на шаблон можно его
        удалить.
        \nДля использования шаблона на экране добавления шкал в новое измерение нажмите кнопку \"Выбрать шаблон\",
        выберите нужный шаблон в списке. После этого шкалы шаблона появятся в вашем измерении.
        \n\n5. Импорт и экспорт
        \n\nДля переноса данных между устройствами можно импортировать/экспортировать базу данных приложения в неизменном
        виде, либо же в формате JSON.
        \nДля импорта нажмите соответствующую кнопку в меню \"Настройки\". В открывшемся проводнике файлов выберите файл с
        разрешением \".json\" или \".db\". После этого данные будут импортированы в приложение.
        \nДля экспорта нажмите соответствующую кнопку в меню \"Настройки\". Выберите, в каком формате вы хотите
        экспортировать данные. Файл с базой данных будет сохранен в папке \"Загрузки\".
    </string>
    \n\n
    <!--==============================================================-->
    <!--Часть просмотра данных-->
    <!--==============================================================-->


    <!--==============================================================-->
    <!--Часть настроек данных-->
    <!--==============================================================-->


    <!--==============================================================-->
    <!--Часть импорта/экспорта данных-->
    <!--==============================================================-->


</resources>