<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/mainmenu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_mainmenu_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp"
            android:textSize="34sp"/>
    <Button
            android:text="@string/mainmenu_toAddScreen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_mainmenu_toAddScreen"
            app:layout_constraintTop_toBottomOf="@+id/textView_mainmenu_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="64dp"/>
    <Button
            android:text="@string/mainmenu_toListScreen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_mainmenu_toListScreen"
            app:layout_constraintTop_toBottomOf="@+id/button_mainmenu_toAddScreen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/mainmenu_toSettingsScreen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_mainmenu_toSettingScreen"
            app:layout_constraintTop_toBottomOf="@+id/button_mainmenu_toListScreen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/mainmenu_toImpExpScreen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_mainmenu_toExpImpScreen"
            app:layout_constraintTop_toBottomOf="@+id/button_mainmenu_toSettingScreen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/mainmenu_autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_mainmenu_author"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"/>
</android.support.constraint.ConstraintLayout>